<resources>
    <string name="app_name">Shoe Store App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Email</string>
    <string name="enter_email_label">Enter an Email</string>
    <string name="enter_you_password_label">Enter Password</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="welcome_text_title">Welcome to Shoe Shop App</string>
    <string name="instructions_text_title">Instructions!!!</string>
    <string name="welcome_text_details">We hope you find what you\'re looking for and that you enjoy your stay.</string>
    <string name="instructions_text_details">The modern classic.
\n\nThe perfect shoe for every occasion.
        \n\nThe ideal combination of style and comfort.
        \n\nNever goes out of fashion.
        \n\nStyle with all the benefits: More Air, more comfort, more style, more design!

A modern classic: Our stylish shoe that has been a bestseller for years is now back in a new version with an updated material mix and a current design language.</string>
    <string name="lets_go_label">Let\'s Go</string>
    <string name="lets_shop_label">Let\'s Shop</string>
    <string name="welcome_label">Welcome</string>
    <string name="instructions_label">Instructions</string>
    <string name="product_name_label">Product Name</string>
    <string name="company_name_label">Company Name</string>
    <string name="shoe_size_label">Shoe Size</string>
    <string name="description_label">Description</string>
    <string name="add_label">add</string>
    <string name="logout_label">Logout</string>
    <string name="cancel_label">Cancel</string>
</resources>