<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        
        <variable
            name="loginViewModel"
            type="com.bassem.shoestoreapp.viewmodels.LoginViewModel" />
    </data>
    <!--    Should user ConstraintLayout layout to complex layout structure-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/large_margin"
        tools:context=".screens.LoginFragment">
        
        <TextView
            android:id="@+id/email_text"
            style="@style/bold_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/enter_email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <EditText
            android:id="@+id/edit_emailAddress"
            style="@style/edit_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:text="@={loginViewModel.user.userEmail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/email_text" />
        
        <TextView
            android:id="@+id/password_text"
            style="@style/bold_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_you_password_label"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/edit_emailAddress" />
        
        <EditText
            android:id="@+id/edit_password"
            style="@style/edit_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text="@={loginViewModel.user.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />
        
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:onClick="@{v->loginViewModel.onLoginClicked(v)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />
    
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>