<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        
        <variable
            name="shoeDetailsViewModel"
            type="com.bassem.shoestoreapp.viewmodels.ShoeViewModel" />
    </data>
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/large_margin"
            tools:context=".screens.ShoeDetailsFragment">
            
            <TextView
                android:id="@+id/name_text"
                style="@style/bold_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            
            <EditText
                android:id="@+id/product_name_edit_text"
                style="@style/edit_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/product_name_label"
                android:inputType="textPersonName"
                android:text="@={shoeDetailsViewModel.shoeDataItem.name}"
                app:layout_constraintEnd_toEndOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="@+id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/name_text" />
            
            <TextView
                android:id="@+id/company_name_text"
                style="@style/bold_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/company_name_label"
                app:layout_constraintEnd_toEndOf="@id/name_text"
                app:layout_constraintStart_toStartOf="@id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/product_name_edit_text" />
            
            <EditText
                android:id="@+id/company_name_edit_text"
                style="@style/edit_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/company_name_label"
                android:inputType="textPersonName"
                android:text="@={shoeDetailsViewModel.shoeDataItem.companyName}"
                app:layout_constraintEnd_toEndOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="@+id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/company_name_text" />
            
            <TextView
                android:id="@+id/shoe_size_text"
                style="@style/bold_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size_label"
                app:layout_constraintEnd_toEndOf="@id/name_text"
                app:layout_constraintStart_toStartOf="@id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/company_name_edit_text" />
            
            <EditText
                android:id="@+id/shoe_size_edit_text"
                style="@style/edit_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/shoe_size_label"
                android:inputType="number"
                android:text="@={shoeDetailsViewModel.shoeDataItem.shoeSize}"
                app:layout_constraintEnd_toEndOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="@+id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size_text" />
            
            <TextView
                android:id="@+id/description_text"
                style="@style/bold_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                app:layout_constraintEnd_toEndOf="@id/name_text"
                app:layout_constraintStart_toStartOf="@id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit_text" />
            
            <EditText
                android:id="@+id/description_edit_text"
                style="@style/edit_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description_label"
                android:inputType="textPersonName"
                android:text="@={shoeDetailsViewModel.shoeDataItem.description}"
                app:layout_constraintEnd_toEndOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="@+id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/description_text" />
            
            <Button
                android:id="@+id/add_shoes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add_label"
                android:onClick="@{v->shoeDetailsViewModel.onAddShoeClicked(v)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancel_button"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_edit_text"
                app:layout_constraintVertical_bias="1.0" />
            
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_shoes_button"
                app:layout_constraintTop_toTopOf="@+id/add_shoes_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>